[workspace]
resolver = "2"

members = [
    "odyssey_desktop",
    "odyssey_hub_client",
    "odyssey_hub_client_ffi",
    "odyssey_hub_service",
    "odyssey_hub_service_interface",
    "odyssey_hub",
    "odyssey_hub_install_service",
    "odyssey_hub_common",
]

# Enable optimizations for dependencies in dev profile
[profile.dev.package."*"]
opt-level = 3
