[workspace]
resolver = "2"

members = [
    "odyssey_desktop",
    "odyssey_hub_client",
    "odyssey_hub_client_ffi",
    "odyssey_hub_server",
    "odyssey_hub_server_interface",
    "odyssey_hub",
    "odyssey_hub_common",
]

# Enable optimizations for dependencies in dev profile
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
