[workspace]
resolver = "2"

members = [
    "odyssey_desktop",
    "odyssey_hub_client",
    "odyssey_hub_client_ffi",
    "odyssey_hub_server",
    "odyssey_hub_server_interface",
    "odyssey_hub",
    "odyssey_hub_common",
    "tools/cargo-bin",
]

exclude = [
    "odyssey_hub_client_uniffi"
]

# Enable optimizations for dependencies in dev profile
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[patch."https://github.com/odysseyarm/protodonge-rs"]
protodongers = { path = "D:/ody/protodonge-rs" }

[patch."https://github.com/odysseyarm/vmgui"]
ats_usb = { path = "D:/ody/ats-vision-tool/ats_usb" }
