[package]
name = "odyssey-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", default-features = false, features = ["std", "async-await"] }
hidapi = "2.6.1"
tokio = { version = "1.36.0", features = ["net"] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "3013463baa71504488a20436beb3db87ecb66df0"
features = ["canvas", "tokio"]
