[package]
name = "odyssey_desktop"
version = "0.1.0"
edition = "2021"
default-run = "odyssey_desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", default-features = false, features = ["std", "async-await"] }
serialport = { version = "4.2.2", features = ["usbportinfo-interface"] }
serial2 = "0.2.20"
tokio = { version = "1.37.0", features = ["macros", "net"] }
ats_usb = { git = "https://github.com/odysseyarm/ats-vision-tool" }
tracing-subscriber = "0.3.19"
dioxus = { version = "0.6.3", features = ["desktop"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32", "Win32_System", "Win32_System_Services"] }
