[package]
name = "odyssey_desktop"
version = "0.1.0"
edition = "2021"
default-run = "odyssey_desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", default-features = false, features = ["std", "async-await"] }
serialport = { version = "4.2.2", features = ["usbportinfo-interface"] }
serial2 = "0.2.20"
tokio = { version = "1.37.0", features = ["macros", "net"] }
ats_usb = { git = "https://github.com/odysseyarm/ats-vision-tool" }
tracing-subscriber = "0.3.19"
dioxus = { version = "0.6.3", features = ["desktop", "signals"] }
dioxus-router = "0.6.3"
dioxus-sdk = { version = "0.7.0-alpha.1", features = ["storage", "window"] }
odyssey_hub_client = { path = "../odyssey_hub_client" }
odyssey_hub_common = { path = "../odyssey_hub_common" }
odyssey_hub_server = { version = "0.1.0", path = "../odyssey_hub_server" }
slab = "0.4.9"
tokio-util = "0.7.15"
image = "0.25.6"
