[package]
name = "odyssey_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
futures = { version = "0.3.30", default-features = false, features = ["alloc", "async-await", "std"] }
futures-concurrency = "7.6.1"
odyssey_hub_server = { version = "0.1.0", path = "../odyssey_hub_server" }
odyssey_hub_server_interface = { version = "0.1.0", path = "../odyssey_hub_server_interface" }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "net"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.interprocess]
git = "https://github.com/kotauskas/interprocess.git"
rev = "ffbf7c65911c87251c47a8403da9b91118eb259c"
features = ["tokio"]
