[package]
name = "odyssey_hub_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
odyssey_hub_service_interface = { version = "0.1.0", path = "../odyssey_hub_service_interface" }
tokio = { version = "1.37.0", features = ["macros", "net", "signal", "rt-multi-thread"] }
tokio-util = { version = "0.7.10" }
tonic = "0.11.0"
tower = "0.4.13"

[dependencies.interprocess]
git = "https://github.com/kotauskas/interprocess.git"
rev = "ffbf7c65911c87251c47a8403da9b91118eb259c"
features = ["tokio"]
