[package]
name = "odyssey_hub_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
odyssey_hub_server_interface = { path = "../odyssey_hub_server_interface" }
odyssey_hub_server = { path = "../odyssey_hub_server" }
odyssey_hub_common = { path = "../odyssey_hub_common" }
tokio = { version = "1.37.0", features = ["macros", "net", "signal", "rt-multi-thread"] }
tokio-util = { version = "0.7.10" }
tonic = "0.11.0"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
interprocess = { version = "2.2", features = ["tokio"] }
futures = "0.3.31"
