[package]
name = "odyssey_hub_client_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-ffi = "0.5.0"
odyssey_hub_client = { path = "../odyssey_hub_client" }
odyssey_hub_common = { path = "../odyssey_hub_common" }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.26.0"
csbindgen = "1.8.0"
