[package]
name = "odyssey_hub_client_ffi_build"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
odyssey_hub_client_ffi = { path = "../odyssey_hub_client_ffi" }

[build-dependencies]
interoptopus = "0.15.0-alpha.6"
interoptopus_backend_c = "0.15.0-alpha.6"
interoptopus_backend_csharp = "0.15.0-alpha.7"
odyssey_hub_client_ffi = { path = "../odyssey_hub_client_ffi" }
