[package]
name = "odyssey_hub_client_uniffi"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "ohc_uniffi"

[[bin]]
name = "cs_bindgen"
path = "src/bin/cs_bindgen.rs"

[dependencies]
odyssey_hub_common = { path = "../odyssey_hub_common" }
odyssey_hub_client = { path = "../odyssey_hub_client" }
odyssey_hub_server_interface = { path = "../odyssey_hub_server_interface" }
tokio = "1.37.0"
tokio-util = "0.7.10"
tonic = "0.11.0"
nalgebra = "0.33"
ats_usb = { git = "https://github.com/odysseyarm/ats-vision-tool" }
paste = "1.0.15"
uniffi = { version = "0.28.3", features = ["tokio"] }
thiserror = "2.0.12"
tokio-stream = "0.1.17"
futures = "0.3.31"
