[build-system]
requires = ["maturin>=1.9,<2.0", "uniffi-bindgen"]
build-backend = "maturin"

[project]
name = "odyssey_hub_client_uniffi"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
