[build-system]
requires = ["maturin>=1.9,<2.0", "uniffi-bindgen"]
build-backend = "maturin"

[project]
name = "odysseyhubclient"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
