[package]
name = "odyssey_hub_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
ats_usb = { git = "https://github.com/odysseyarm/ats-vision-tool" }
ats_cv = { git = "https://github.com/odysseyarm/ats_cv.git" }
nalgebra = "0.33.2"
app_dirs2 = "2.5.5"
serde = "1.0.197"
serde_json = "1.0.128"
tracing = "0.1.41"
json5 = "0.4.1"
