[package]
name = "odyssey_hub_install_service"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.6.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
