[package]
name = "odyssey_hub_install_service"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8.0"
windows = { version = "0.61.1", features = ["Win32", "Win32_Security", "Win32_Security_Authorization", "Win32_System", "Win32_System_Services", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_Storage_FileSystem"] }
windows-core = "0.61.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
