[package]
name = "odyssey_hub_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahrs = { version = "0.7", features = ["field_access"] }
anyhow = "1.0.81"
futures = { version = "0.3.30", default-features = false, features = ["alloc", "async-await", "std"] }
odyssey_hub_server_interface = { version = "0.1.0", path = "../odyssey_hub_server_interface" }
odyssey_hub_common = { version = "0.1.0", path = "../odyssey_hub_common" }
serde = { version = "1.0.197", features = ["derive"] }
serialport = { version = "4.2.2", features = ["usbportinfo-interface"] }
serial2 = "0.2.20"
tokio = { version = "1.37.0", features = ["macros", "net", "rt-multi-thread", "io-util", "signal"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = "0.11.0"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
parking_lot = "0.12.1"
tokio-util = "0.7.10"
pin-project = "1.1.5"
ats_usb = { git = "https://github.com/odysseyarm/ats-vision-tool" }
nalgebra = "0.33"
cam-geom = "0.15"
opencv-ros-camera = "0.15"
ats_cv = { git = "https://github.com/odysseyarm/ats_cv.git" }
ats_common = { git = "https://github.com/odysseyarm/ats_common.git" }
sqpnp = { git = "https://github.com/0e4ef622/sqpnp.git" }
socket2 = "0.5.7"
arrayvec = "0.7.4"
serde_json = "1.0.128"
sysinfo = "0.32.0"
arc-swap = "1.7.1"
interprocess = { version = "2.2", features = ["tokio"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
