[package]
name = "odyssey_hub_service"
version = "0.1.0"
edition = "2021"
default-run = "no_service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
futures = { version = "0.3.30", default-features = false, features = ["alloc", "async-await", "std"] }
odyssey_hub_service_interface = { version = "0.1.0", path = "../odyssey_hub_service_interface" }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = "0.11.0"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }

[dependencies.interprocess]
git = "https://github.com/kotauskas/interprocess.git"
rev = "ffbf7c65911c87251c47a8403da9b91118eb259c"
features = ["tokio"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.6.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
