[package]
name = "odyssey_hub_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahrs = { git = "https://github.com/jmagnuson/ahrs-rs", version = "0.6.0", default-features = false }
anyhow = "1.0.81"
futures = { version = "0.3.30", default-features = false, features = ["alloc", "async-await", "std"] }
hidapi = "2.6.1"
odyssey_hub_service_interface = { version = "0.1.0", path = "../odyssey_hub_service_interface" }
odyssey_hub_common = { version = "0.1.0", path = "../odyssey_hub_common" }
serde = { version = "1.0.197", features = ["derive"] }
serialport = { version = "4.2.2", features = ["usbportinfo-interface"] }
serial2 = "0.2.20"
tokio = { version = "1.37.0", features = ["macros", "net", "rt-multi-thread", "io-util", "signal"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = "0.11.0"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
parking_lot = "0.12.1"
tokio-util = "0.7.10"
pin-project = "1.1.5"
ats_usb = { git = "https://github.com/odysseyarm/ats-vision-tool" }
nalgebra = "0.32.5"
cam-geom = "0.14.1"
opencv-ros-camera = "0.14.1"
ats_cv = { git = "https://github.com/odysseyarm/ats_cv.git", rev = "1e1119d169ea32b46c7f27ad27afe5bb6063bf35" }
sqpnp = { git = "https://github.com/0e4ef622/sqpnp.git" }
socket2 = "0.5.7"

[dependencies.interprocess]
git = "https://github.com/kotauskas/interprocess.git"
rev = "ffbf7c65911c87251c47a8403da9b91118eb259c"
features = ["tokio"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.6.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
