[package]
name = "odyssey_hub_service_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
tonic = { version = "0.11.0", features = ["prost"] }

[build-dependencies]
tonic-build = "0.11.0"
